@@ -26,7 +26,7 @@
 /**
  * Global variables
  */
-UINT64 LIBNXSRV_EXPORTABLE g_flags = AF_USE_SYSLOG | AF_CATCH_EXCEPTIONS | AF_WRITE_FULL_DUMP | AF_LOG_SQL_ERRORS | AF_ENABLE_LOCAL_CONSOLE;
+UINT64 LIBNXSRV_EXPORTABLE g_flags = AF_USE_SYSLOG | AF_CATCH_EXCEPTIONS | AF_WRITE_FULL_DUMP | AF_LOG_SQL_ERRORS | AF_ENABLE_LOCAL_CONSOLE | AF_CACHE_DB_ON_STARTUP;
 
 /**
  * Agent error codes
